--- a/FamilyRecipes/wwwroot/css/family.css
+++ b/FamilyRecipes/wwwroot/css/family.css
@@ -11,19 +11,27 @@
     --electricblue: 128, 223, 255;
     --goldycolor: 255, 172, 0;
     --lemonyellow: 213, 254, 44;
+    --darkxmas: 167, 5, 0;
 }
+
+.lek{
+    color: rgb(167, 5, 0)
+}
+
+/* using variables ensures conformity since we only need to change one value */
+/* var(--bgplaincolor) => 10, 0, 24 */
+/* rgb(var(--bgplaincolor)); => rgb(10, 0, 24);*/
 
 .nav-bg {
     background-color: rgb(var(--bgplaincolor)); /* fallback color */
     background: linear-gradient(5deg, rgba(var(--navfirstcolor),1) 0%, rgba(var(--navsecondcolor),1) 100%);
-    /* note: using variables ensures conformity since we only need to change one value */
-    /*       however, changing variables requires reloading                            */
+    /* linear-gradient gives a fade between colors from start to finish */
+    /* degrees sets rotation */
 }
+
 .footer-bg {
     background-color: rgb(var(--bgplaincolor)); /* fallback color */
     background: linear-gradient(85deg, rgba(var(--navfirstcolor),1) 0%, rgba(var(--navsecondcolor),1) 100%);
-    /* linear-gradient gives a fade between colors from start to finish */
-    /* degrees sets rotation */
 }
 
 .main-bg {
