--- a/FamilyRecipes/wwwroot/css/site.css
+++ b/FamilyRecipes/wwwroot/css/site.css
@@ -22,6 +22,9 @@ body {
     background-color: rgb(50,50,50) !important;
 }
 
+
+/* Changes / Additions */
+
 a:link,
 a:visited,
 a:active {
@@ -53,6 +56,11 @@ p {
 .navtextyellow {
     color: rgba(255, 255, 128, 1) !important;
     text-shadow: rgba(0,0,0,0.7) 7px 3px 7px !important;
+}
+
+.footerspacer{
+    margin-bottom: 90px;
+
 }
 
 /* *START* Fixing ugly nav-bar by cloning bootstrap parts and rebuilding to new class */
