--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="~/css/family.css" asp-append-version="true" />
 
 </head>
-<body class="main-bg">
+<body class="main-bg max80">
     <header class="nav-bg">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light nav-bg border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light nav-bg border-bottom box-shadow">
             <div class="container">
                 <a class="navbar-branded" asp-area="" asp-page="/Index">FamilyRecipes</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -35,14 +35,16 @@
         </nav>
     </header>
     <div class="container footerspacer">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer footer-bg t-lemony">
-        <div class="container">
-            &copy; 2024 - FamilyRecipes
+    <footer class="border-top footer footer-bg-container t-lemony">
+        <div class="footer-bg">
+            <div class="container">
+                &nbsp;
+            </div>
         </div>
     </footer>
 
