--- a/FamilyRecipes/wwwroot/css/site.css
+++ b/FamilyRecipes/wwwroot/css/site.css
@@ -1,3 +1,8 @@
+/* DEBUG */
+/**{
+    border: 1px solid red;
+}*/
+
 html {
     font-size: 14px;
 }
@@ -59,8 +64,8 @@ p {
 }
 
 .footerspacer{
-    margin-bottom: 90px;
-
+    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 /* *START* Fixing ugly nav-bar by cloning bootstrap parts and rebuilding to new class */
