Updated family.css and _layout.cshtml
Update to set new max width of main container to 90vw

--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <div class="container footerspacer">
+    <div class="container footerspacer maxw90">
         <main role="main">
             @RenderBody()
         </main>
