Updated Layout and CSS
family.css and _Layout.cshtml updated for graphical improvement of the footer, which is now fading and mixing colors behind text as it should.

--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml
@@ -46,6 +46,14 @@
                 &nbsp;
             </div>
         </div>
+        <div class="footer-bg-layer">
+            <div class="container">
+                &nbsp;
+            </div>
+        </div>
+        <div class="container t-pinky index100 text-center fw1000">
+            &copy; 2024 - FamilyRecipes
+        </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
