--- a/FamilyRecipes/Pages/Index.cshtml
+++ b/FamilyRecipes/Pages/Index.cshtml
@@ -17,7 +17,8 @@
 
 <div class="scrollinside max80 footerspacer">
     <div class="text-center">
-        <div class="f-h1 t-neonpink">t-neonpink f-h1</div>
+        <br />
+        <div class="f-h1 t-neonpink">Family Recipes</div>
         <br />
         @foreach (Models.Unit u in firstUnits)
         {
@@ -32,9 +33,9 @@
         }
         <p class="t-pinky">Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     </div>
+    <div class="text-center f-h1 t-neonpink">t-neonpink f-h1</div>
     <div class="text-center t-goldy f-h1">f-h1 t-goldy</div>
     <div class="text-center t-pinky f-h1">f-h1 t-pinky</div>
     <div class="text-center f-p t-gld">f-p t-gld</div>
     <br />
-    <div class="text-center t-pinky fw1000">&copy; 2024 - FamilyRecipes</div>
 </div>
