Cshtml-pages added/changed
Also added menu items to layout

--- a/FamilyRecipes/Pages/Index.cshtml
+++ b/FamilyRecipes/Pages/Index.cshtml
@@ -20,7 +20,7 @@
         <br />
         <div class="f-h1 t-neonpink">Family Recipes</div>
         <br />
-        @foreach (Models.Unit u in firstUnits)
+@*         @foreach (Models.Unit u in firstUnits)
         {
             if (u.IsMetrical)
             {
@@ -30,12 +30,7 @@
             {
                 <p class="f-p t-darkxmas">The unit @u.Name is not awesome!</p>
             }
-        }
-        <p class="t-pinky">Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        } *@
     </div>
-    <div class="text-center f-h1 t-neonpink">t-neonpink f-h1</div>
-    <div class="text-center t-goldy f-h1">f-h1 t-goldy</div>
-    <div class="text-center t-pinky f-h1">f-h1 t-pinky</div>
-    <div class="text-center f-p t-gld">f-p t-gld</div>
     <br />
 </div>
