--- a/FamilyRecipes/Pages/Recipes.cshtml
+++ b/FamilyRecipes/Pages/Recipes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyRecipes.Pages.AddRecipeModel
+@model FamilyRecipes.Pages.RecipesModel
 @{
     ViewData["Title"] = "Home page";
     List<Models.Unit> units = Model.Units;
@@ -19,18 +19,16 @@
 <div class="scrollinside max80 footerspacer">
     <div class="text-center">
         <br />
-        <div class="f-h1 t-neonpink">Add Recipe</div>
+        <div class="f-h1 t-neonpink">Recipes</div>
         <br />
         <div>
             <div class="t-goldy">@CurrentRecipe.Title</div>
-            <div class="t-gld">Time: @CurrentRecipe.TimeRequired</div>
-            <br />
+@*             <div class="t-gld">Time: @CurrentRecipe.TimeRequired</div>
             @foreach (Models.RecipeIngredient ri in CurrentRecipe.RecipeIngredients)
             {
-                <div class="f-p t-gld">@ri.Ingredient.Name: @ri.Amount, @ri.Unit.Name</div>
-            }
+                <p>@ri.Ingredient.Name: @ri.Amount, @ri.Unit.Name</p>
+            } *@
         </div>
     </div>
     <br />
 </div>
-
