--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between navcolors">
                     <ul class="navbar-nav flex-grow-1 navcolors">
                         <li class="nav-item navcolors">
-                            <a class="f-nav-link navcolors" asp-area="" asp-page="/Index">Home</a>
+                            <a class="f-nav-link navcolors" asp-area="" asp-page="/Recipes">Recipes</a>
+                        </li>
+                        <li class="nav-item navcolors">
+                            <a class="f-nav-link navcolors" asp-area="" asp-page="/AddRecipe">Add Recipe</a>
+                        </li>
+                        <li class="nav-item navcolors">
+                            <a class="f-nav-link navcolors" asp-area="" asp-page="/Samples">CSS Samples</a>
                         </li>
                         <li class="nav-item navcolors">
                             <a class="f-nav-link navcolors" asp-area="" asp-page="/Privacy">Privacy</a>
