Minor html changes

--- a/FamilyRecipes/Pages/Recipes.cshtml
+++ b/FamilyRecipes/Pages/Recipes.cshtml
@@ -21,8 +21,9 @@
         <br />
         <div class="f-h1 t-neonpink">Recipes</div>
         <br />
-        <div>
-            <div class="t-goldy">@CurrentRecipe.Title</div>
+        <div class="card1 card-color1 glass">
+            <br />
+            <div class="f-h2 t-pinky">@CurrentRecipe.Title</div>
 @*             <div class="t-gld">Time: @CurrentRecipe.TimeRequired</div>
             @foreach (Models.RecipeIngredient ri in CurrentRecipe.RecipeIngredients)
             {
