--- a/FamilyRecipes/Pages/Samples.cshtml
+++ b/FamilyRecipes/Pages/Samples.cshtml
@@ -12,6 +12,8 @@
         <div class="f-h1 t-neonpink">size: f-h1 - color: t-neonpink</div>
         <div class="f-h1 t-goldy">f-h1 t-goldy</div>
         <div class="f-h1 t-pinky">f-h1 t-pinky</div>
+        <div class="f-h2 t-pinky">f-h2 t-pinky</div>
+        <div class="f-h3 t-pinky">f-h3 t-pinky</div>
         <div class="f-p t-gld">f-p t-gld</div>
     </div>
     <br />
