--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </header>
-    <div class="container footerspacer maxw90">
+    <div class="container footerspacer w100">
         <main role="main">
             @RenderBody()
         </main>
