--- a/FamilyRecipes/wwwroot/css/family.css
+++ b/FamilyRecipes/wwwroot/css/family.css
@@ -12,10 +12,14 @@
     --goldycolor: 255, 172, 0;
     --lemonyellow: 213, 254, 44;
     --darkxmas: 0, 175, 215;
+    --cardbgcolor1: 255, 255, 170;
+    --cardtextcolor1: 255, 255, 127;
+    --brightyellow: 255, 255, 127;
 }
 
-.lek{
-    color: rgb(0, 175, 215)
+.lek {
+    color: rgb(255, 255, 127);
+    Background: rgb(255, 171, 19);
 }
 
 /* using variables ensures conformity since we only need to change one value */
@@ -148,6 +152,16 @@
     /* font-weight sets font from thin to fat, 500 is normal, 0 is thin, 1000 is fat */
 }
 
+.f-h2 {
+    font-size: 2em;
+    font-weight: 1000;
+}
+
+.f-h3 {
+    font-size: 1.5em;
+    font-weight: 1000;
+}
+
 .f-p {
     font-size: 1.2em;
     font-weight: 600;
@@ -178,6 +192,70 @@
     max-width: 90vw !important;
 }
 
+.w100 {
+    min-width: 100vw !important;
+}
+
 .index100{
     z-index: 100;
+}
+
+.glass{
+    backdrop-filter: blur(8px);
+}
+
+/* --------------------------- CARDS -----------------------------*/
+
+.card-color1 {
+    background-image: linear-gradient(170deg, 
+                        rgba(var(--cardbgcolor1),0.1) clamp(25%, 120px, 120px), 
+                        rgba(var(--cardbgcolor1),0.05) clamp(25%, 120px, 120px), 
+                        rgba(var(--cardbgcolor1),0.05) clamp(75%, calc(100% - 120px), calc(100% - 120px)), 
+                        rgba(var(--cardbgcolor1),0.1) clamp(75%, calc(100% - 120px), calc(100% - 120px)));
+    border: solid 4px rgba(0,0,0,0.4);
+}
+
+.card1 {
+    width: clamp(350px, 50%, 500px);
+    color: rgb(var(--cardtextcolor1));
+    max-height: 180vh;
+    min-height: 40vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    margin: auto;
+    padding: 10px;
+    margin-bottom: 0px;
+    z-index: 20;
+    resize:vertical;
+}
+
+.card1-title{
+    color: rgb(var(--cardtextcolor1));
+    text-shadow: 2px 3px 3px rgba(0,0,0,0.7);
+    font-size: 1.2em;
+    font-weight: 700;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.card1-field {
+    width: 80%;
+    color: rgb(var(--cardtextcolor1));
+    text-shadow: 1px 2px 0px rgba(0,0,0,0.5);
+    padding: 5px;
+    font-weight: 700;
+    border: none;
+    outline: inset;
+}
+
+/*.card1-field, input[type=text], input[type=textarea] {
+    background-color: rgba(var(--cardtextcolor), 0.5) !important;
+}*/
+
+.checkered-tiles{
+    background-image: url("../images/graphics/checkers_tile.svg");
+    background-repeat:repeat;
+    background-attachment:fixed;
+    width: 100%;
+    height: 100%;
 }
