--- a/FamilyRecipes/Pages/Index.cshtml
+++ b/FamilyRecipes/Pages/Index.cshtml
@@ -15,22 +15,33 @@
     }
 }
 
-<div class="scrollinside max80 footerspacer">
-    <div class="text-center">
-        <br />
-        <div class="f-h1 t-neonpink">Family Recipes</div>
-        <br />
-@*         @foreach (Models.Unit u in firstUnits)
-        {
-            if (u.IsMetrical)
-            {
-                <p class="f-p t-gld">The unit @u.Name is awesome! It's Metrical!</p>
-            }
-            if (!u.IsMetrical)
-            {
-                <p class="f-p t-darkxmas">The unit @u.Name is not awesome!</p>
-            }
-        } *@
+<div class="bg-trees_sun">
+    <div class="bg-trees_base">
+        <div class="bg-trees_left">
+            <div class="bg-trees_right">
+                <div class="scrollinside pop max80 text-center">
+                    <br />
+                    <div class="f-h1 t-neonpink">Family Recipes<br />DELUXE</div>
+                    <br />
+                    <br />
+                    <div class="card1 card-color2 card-shadow_large glass">
+                        @foreach (Models.Unit u in firstUnits)
+                        {
+                            if (u.IsMetrical)
+                            {
+                                <p class="f-p t-gld">The unit @u.Name is awesome! It's Metrical!</p>
+                            }
+                            if (!u.IsMetrical)
+                            {
+                                <p class="f-p t-darkxmas">The unit @u.Name is not awesome!</p>
+                            }
+                        }
+                        <br />
+                    </div>
+                    <br />
+                    <br />
+                </div>
+            </div>
+        </div>
     </div>
-    <br />
 </div>
